--- a/src/app/merchant/merchant.page.scss
+++ b/src/app/merchant/merchant.page.scss
@@ -3,8 +3,8 @@ div,
 .md,
 * {
     --white: #fff;
-    --primary: #7210FF;
-    --bg-color:#7210FF;
+    --primary: #10c3ff;
+    --bg-color:#10c3ff;
     --green_color: #00ff5a;
     --gray: #D5D5D5;
     --transparent: rgba(0, 0, 0, 0);
