--- a/src/app/test/test.page.scss
+++ b/src/app/test/test.page.scss
@@ -5,7 +5,7 @@ div,
     --primary: #2172ec;
     --white: #fff;
     --text-light: #c9ced4;
-    --bg-color: #7210FF;
+    --bg-color: #10c3ff;
     --transparent: rgba(0, 0, 0, 0);
 }
 
