--- a/src/app/test/test.page.html
+++ b/src/app/test/test.page.html
@@ -8,7 +8,7 @@
 
   <div class="banner">
       <div class="banner_img">
-          <img src="assets/images/logo.png">
+          <img src="assets/images/favicon.png">
       </div>
       <div class="banner_text">
           <h2>You're registered as ?</h2>
