--- a/src/app/merchant/merchant.page.html
+++ b/src/app/merchant/merchant.page.html
@@ -1,15 +1,14 @@
 
 <ion-content fullscreen>
   <div class="logo-box ion-text-center">
-      <img src="assets/images/logo.png" class="animated zoomIn delay_2">
+      <img src="assets/images/favicon.png" class="animated zoomIn delay_2">
   </div>
 
   <div class="form">
-      <p class="text">Enter your Merchant number</p>
+      <p class="text">Enter your name</p>
       <ion-list lines="none" class="animated slideInUp delay_2">
           <ion-item lines="none">
-              <h2 slot="start" class="ion-text-center">+237</h2>
-              <ion-input type="number" placeholder="Enter your 3 digit code"></ion-input>
+              <ion-input type="number" placeholder="Mark"></ion-input>
               <ion-button slot="end" size="large" shape="round" class="btn">next</ion-button>
           </ion-item>
       </ion-list>
