--- a/src/app/personal/personal.page.scss
+++ b/src/app/personal/personal.page.scss
@@ -329,7 +329,7 @@ ion-content {
         --padding-start: 0;
         --background: var(--transparent);
         width: calc(100% - 23px);
-        margin: 0;
+        margin-left: 0.7em;
         border-radius: 40px;
         padding: 9px;
         overflow: hidden;
