duration for operation

--- a/src/app/personal/personal.page.html
+++ b/src/app/personal/personal.page.html
@@ -10,23 +10,21 @@
       <p class="text">Choose the operator you wish to use</p>
       <ion-list lines="none">
             <ion-item>
-                <div class="item_inner" [routerLink]="['/personal']">
+                <div class="item_inner" [routerLink]="['/orange-form']">
                     <div class="text_box">
                         <h2>ORANGE</h2>  
                     </div>
                 </div>
             </ion-item>
-
             <ion-item>
-                <div class="item_inner" [routerLink]="['/personal']">
+                <div class="item_inner" [routerLink]="['/mtn-form']">
                     <div class="text_box">
-                        <p>MTN</p>  
+                        <h2>MTN</h2>  
                     </div>
                 </div>
             </ion-item>
-
             <ion-item>
-                <div class="item_inner" [routerLink]="['/personal']">
+                <div class="item_inner" [routerLink]="['/camtel-form']">
                     <div class="text_box">
                         <h2>CAMTEL</h2>  
                     </div>
