--- a/src/app/month-orange/month-orange.page.html
+++ b/src/app/month-orange/month-orange.page.html
@@ -1,13 +1,29 @@
-<ion-header [translucent]="true">
+<ion-header>
   <ion-toolbar>
-    <ion-title>month-orange</ion-title>
+      <ion-buttons slot="start">
+          <ion-menu-button></ion-menu-button>
+      </ion-buttons>
+      <ion-title></ion-title>
   </ion-toolbar>
-</ion-header>
-
-<ion-content [fullscreen]="true">
-  <ion-header collapse="condense">
-    <ion-toolbar>
-      <ion-title size="large">month-orange</ion-title>
-    </ion-toolbar>
-  </ion-header>
-</ion-content>
+  <ion-content fullscreen class="bg_color">
+    <div class="tab_content">
+      <ion-list lines="none">
+        <ion-item>
+            <div class="img_box center_img">
+                <img src="assets/images/Gopool/profiles/5.png" class="crop_img">
+            </div>
+            <ion-label>
+                <h2> Samantha Smith </h2>
+                <h3 class="d-flex">
+                    <span class="message">
+                    No worries, I will be there on time.
+                  </span>
+                    <span class="end">
+                    20 min
+                  </span>
+                </h3>
+            </ion-label>
+        </ion-item>
+      </ion-list>
+    </div>
+  </ion-content>
