--- a/src/app/orange-form/orange-form.page.scss
+++ b/src/app/orange-form/orange-form.page.scss
@@ -104,6 +104,9 @@ ion-header {
 
 ion-content {
     --background: var(--bg-color);
+    .form {
+        margin-top: 10em;
+    }
     .text {
         margin: 2em;
         text-align: center;
