--- a/src/app/test/test.page.scss
+++ b/src/app/test/test.page.scss
@@ -86,6 +86,19 @@ ion-header {
 
 ion-content {
     --background: var(--bg-color);
+    .main-icon {
+        width: 100%;
+        align-items: center;
+        justify-content: center;
+        
+    }
+    .main-image {
+        width: 80%;
+        display: block;
+        margin-left: 5em;
+        margin-top: 2em;
+        padding: 0;
+    }
     .banner_text {
         margin: 2.5em 0 2.5em 0;
         width: 100%;
@@ -102,12 +115,7 @@ ion-content {
         }
         
     }
-    .main-icon-size{
-        
-        width: 60%;
-        margin: 5em 0 3em 7.8em;
-        
-    }
+    
     .text {
         margin: 2em;
         text-align: center;
