--- a/src/app/test/test.page.html
+++ b/src/app/test/test.page.html
@@ -8,7 +8,7 @@
 </ion-header>
 
 <ion-content fullscreen>
-    <div class="main-icon">
+    <div class="center_img">
         <img src="assets/icon/payment-method-pay-svgrepo-com.svg" alt="view our app" class="main-image">
     </div>
 
