--- a/src/app/month-mtn/month-mtn.page.html
+++ b/src/app/month-mtn/month-mtn.page.html
@@ -1,13 +1,79 @@
-<ion-header [translucent]="true">
+<ion-header>
   <ion-toolbar>
-    <ion-title>month-mtn</ion-title>
+      <ion-buttons slot="start">
+          <ion-menu-button></ion-menu-button>
+      </ion-buttons>
+      <ion-title></ion-title>
   </ion-toolbar>
-</ion-header>
-
-<ion-content [fullscreen]="true">
-  <ion-header collapse="condense">
-    <ion-toolbar>
-      <ion-title size="large">month-mtn</ion-title>
-    </ion-toolbar>
-  </ion-header>
-</ion-content>
+  <ion-content fullscreen class="bg_color">
+    <p class="text">Select your bundle</p>
+    <div class="tab_content">
+      <ion-list lines="none">
+        <ion-item>
+          <div class="img_box center_img">
+            <img src="assets/icon/mtn-group.svg" class="crop_img">
+          </div>
+          <ion-label [routerLink]="['/mtn']">
+            <h2>Good Deal</h2>
+            <h3 class="d-flex">
+            <span class="message">
+              Up to 3GB internet and 50000frs calls to all networks
+            </span>
+            <span class="end">
+              1,000 FRS
+            </span>
+            </h3>
+          </ion-label>
+        </ion-item>
+        <ion-item>
+          <div class="img_box center_img">
+            <img src="assets/icon/mtn-group.svg" class="crop_img">
+          </div>
+          <ion-label [routerLink]="['/mtn']">
+            <h2>Good Deal</h2>
+            <h3 class="d-flex">
+            <span class="message">
+              Up to 3GB internet and 50000frs calls to all networks
+            </span>
+            <span class="end">
+              1,000 FRS
+            </span>
+            </h3>
+          </ion-label>
+        </ion-item>
+        <ion-item>
+          <div class="img_box center_img">
+            <img src="assets/icon/mtn-group.svg" class="crop_img">
+          </div>
+          <ion-label [routerLink]="['/mtn']">
+            <h2>Good Deal</h2>
+            <h3 class="d-flex">
+            <span class="message">
+              Up to 3GB internet and 50000frs calls to all networks
+            </span>
+            <span class="end">
+              1,000 FRS
+            </span>
+            </h3>
+          </ion-label>
+        </ion-item>
+        <ion-item>
+          <div class="img_box center_img">
+            <img src="assets/icon/mtn-group.svg" class="crop_img">
+          </div>
+          <ion-label [routerLink]="['/mtn']">
+            <h2>Good Deal</h2>
+            <h3 class="d-flex">
+            <span class="message">
+              Up to 3GB internet and 50000frs calls to all networks
+            </span>
+            <span class="end">
+              1,000 FRS
+            </span>
+            </h3>
+          </ion-label>
+        </ion-item>
+        
+      </ion-list>
+    </div>
+  </ion-content>
