--- a/src/app/month-orange/month-orange.page.html
+++ b/src/app/month-orange/month-orange.page.html
@@ -1,29 +1,79 @@
 <ion-header>
-  <ion-toolbar>
+  <ion-toolbar class="toolbar-color">
       <ion-buttons slot="start">
           <ion-menu-button></ion-menu-button>
       </ion-buttons>
       <ion-title></ion-title>
   </ion-toolbar>
   <ion-content fullscreen class="bg_color">
+    <p class="text">Select your bundle</p>
     <div class="tab_content">
       <ion-list lines="none">
         <ion-item>
-            <div class="img_box center_img">
-                <img src="assets/images/Gopool/profiles/5.png" class="crop_img">
-            </div>
-            <ion-label>
-                <h2> Samantha Smith </h2>
-                <h3 class="d-flex">
-                    <span class="message">
-                    No worries, I will be there on time.
-                  </span>
-                    <span class="end">
-                    20 min
-                  </span>
-                </h3>
-            </ion-label>
+          <div class="img_box center_img">
+            <img src="assets/icon/orange-3.svg" class="crop_img">
+          </div>
+          <ion-label [routerLink]="['/orange']">
+            <h2>Good Deal</h2>
+            <h3 class="d-flex">
+            <span class="message">
+              Up to 3GB internet and 50000frs calls to all networks
+            </span>
+            <span class="end">
+              1,000 FRS
+            </span>
+            </h3>
+          </ion-label>
         </ion-item>
+        <ion-item>
+          <div class="img_box center_img">
+            <img src="assets/icon/orange-3.svg" class="crop_img">
+          </div>
+          <ion-label [routerLink]="['/orange']">
+            <h2>Good Deal</h2>
+            <h3 class="d-flex">
+            <span class="message">
+              Up to 3GB internet and 50000frs calls to all networks
+            </span>
+            <span class="end">
+              1,000 FRS
+            </span>
+            </h3>
+          </ion-label>
+        </ion-item>
+        <ion-item>
+          <div class="img_box center_img">
+            <img src="assets/icon/orange-3.svg" class="crop_img">
+          </div>
+          <ion-label [routerLink]="['/orange']">
+            <h2>Good Deal</h2>
+            <h3 class="d-flex">
+            <span class="message">
+              Up to 3GB internet and 50000frs calls to all networks
+            </span>
+            <span class="end">
+              1,000 FRS
+            </span>
+            </h3>
+          </ion-label>
+        </ion-item>
+        <ion-item>
+          <div class="img_box center_img">
+            <img src="assets/icon/orange-3.svg" class="crop_img">
+          </div>
+          <ion-label [routerLink]="['/orange']">
+            <h2>Good Deal</h2>
+            <h3 class="d-flex">
+            <span class="message">
+              Up to 3GB internet and 50000frs calls to all networks
+            </span>
+            <span class="end">
+              1,000 FRS
+            </span>
+            </h3>
+          </ion-label>
+        </ion-item>
+        
       </ion-list>
     </div>
   </ion-content>
