--- a/src/app/mtn/mtn.page.html
+++ b/src/app/mtn/mtn.page.html
@@ -31,7 +31,7 @@
     <ion-list lines="none" class="animated slideInUp delay_2">
       <ion-item lines="none">
         <ion-input type="number" placeholder="Payer phone number"></ion-input>
-        <ion-button slot="end" size="large" shape="round" class="btn">next</ion-button>
+        <ion-button slot="end" size="large" shape="round" class="btn" [routerLink]="['/succes']">next</ion-button>
       </ion-item>
     </ion-list>
   </div>
