--- a/src/app/day-mtn/day-mtn.page.html
+++ b/src/app/day-mtn/day-mtn.page.html
@@ -6,7 +6,7 @@
       <ion-title></ion-title>
   </ion-toolbar>
   <ion-content fullscreen class="bg_color">
-    <p class="text">Select your bundle</p>
+    <p class="text">Select your daily bundle</p>
     <div class="tab_content">
       <ion-list lines="none">
         <ion-item>
